--- a/doro/Localization/Duel.de-DE.resx
+++ b/doro/Localization/Duel.de-DE.resx
@@ -153,10 +153,10 @@
   <data name="ManyVillages" xml:space="preserve">
     <value>Viele Dörfer</value>
   </data>
-  <data name="Modul1" xml:space="preserve">
+  <data name="Module1" xml:space="preserve">
     <value>Modul 1</value>
   </data>
-  <data name="Modul2" xml:space="preserve">
+  <data name="Module2" xml:space="preserve">
     <value>Modul 2</value>
   </data>
   <data name="OldOak" xml:space="preserve">
