--- a/doro/Localization/Duel.resx
+++ b/doro/Localization/Duel.resx
@@ -153,11 +153,11 @@
   <data name="ManyVillages" xml:space="preserve">
     <value>Many Villages</value>
   </data>
-  <data name="Modul1" xml:space="preserve">
-    <value>Modul 1</value>
+  <data name="Module1" xml:space="preserve">
+    <value>Module 1</value>
   </data>
-  <data name="Modul2" xml:space="preserve">
-    <value>Modul 2</value>
+  <data name="Module2" xml:space="preserve">
+    <value>Module 2</value>
   </data>
   <data name="OldOak" xml:space="preserve">
     <value>Old Oak</value>
